2002-11-27  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPort.h:  Don't turn off winsock prototypes!
	TclX didn't like it.  Even though the core doesn't use the
	prototypes, do offer them.

	* win/tclWinSock.c:  Removed shutdown() from the function
	table as it wasn't referenced anywhere and cleaned-up some
	casting that that wasn't needed.

2002-11-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclEncoding.c (TclFinalizeEncodingSubsystem): properly
	cleanup all encodings by using Tcl_FirstHashEntry in the while loop.

	* unix/Makefile.in (valgrind): add simple valgrind target

	* tests/exec.test: unset path var to allow singleproc testing

	* generic/tclInterp.c (AliasCreate): preserve/release interps to
	prevent possible FMR error in bad alias cases.

2002-11-26  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPort.h:
	* win/tclWinSock.c:  This patch does two things:

	1) Cleans-up the winsock typedefs by using the typedefs
	provided by winsock2.h.  This has no effect on how winsock
	is initialized; just makes the source code easier to read.
	[Patch 561305 561301]

	2) Revamps how the socket message handler thread is brought
	up and down to allows for cleaner exits without the use of
	TerminateThread().  TerminateThread is evil.  No attempt has
	been made to resolve [Bug 593810] which may need a new
	channel driver version for adding a registering function
	within the transfered thread to init the handler thread.
	IOW, initialization of the TSD structure is getting bypassed
	through the thread extension's [thread::transfer] command.

2002-11-26  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinConsole.c:
	* win/tclWinPipe.c:
	* win/tclWinSerial.c:
	* win/tclWinSock.c:
	* win/tclWinThrd.c:
	* win/tclWinTime.c:  General cleanup of all worker threads used
	by the channel drivers.  Eliminates the normal case where the
	worker thread is terminated ('cept the winsock one).  Instead,
	use kernel events to signal a clean exit.  Only when the worker